c/src/test/resources/c/nec_inline_bnc/invalid/inf4.ctrl
<controlFile>
  <sourceFile name="../inf4.c" id="1" />
  <run>
    <startPosition fileId="1" line="7" />
    <endPosition fileId="1" line="54" />
  </run>
</controlFile>